--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "version": "1.0.0",
     "type": "library",
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/support": "^8.0|^9.0"
+        "php": "^7.3|^8.0"
     },
     "autoload": {
         "psr-4": {
